--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                     Click Executed At: <br>
                 </td>
                 <td>
-                    <div id="timeout-idx"></div>
-                    <div id="click-idx"></div>
+                    <div id="timeout-idx">&nbsp;</div>
+                    <div id="click-idx">&nbsp;</div>
                 </td>
             </tr>
 
@@ -115,8 +115,8 @@
                     Current Click: <br>
                 </td>
                 <td>
-                    <div id="interval-idx"></div>
-                    <div id="click-idx2"></div>
+                    <div id="interval-idx">&nbsp;</div>
+                    <div id="click-idx2">&nbsp;</div>
                 </td>
             </tr>
         </table>
