--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </head>
     <body>
         <div>
-            <img src="https://m.popkey.co/770e6b/4Mm5x.gif">
+            <img src="4Mm5x.gif">
         </div>
 
         <table>
